--- a/_layouts/lab.html
+++ b/_layouts/lab.html
@@ -29,17 +29,13 @@
 
     {% include header.html %}
 
-    <a id="index" class="anchor" href="workshop-index.html" aria-hidden="true">
-      <span aria-hidden="true" class="octicon octicon-link"></span>
-      <i class="fa fa-chevron-left"></i>
-      LABS INDEX
-    </a>
-
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
 
           {{content}}
+
+          {% include pager.html %}
 
         </section>
       </div>
